--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "react-bootstrap": "^2.4.0",
+    "react-csv": "^2.2.2"
   }
 }
