--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
+    "chart.js": "^2.9.4",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -20,7 +20,7 @@
     "mongoose": "^6.3.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.16",
-    "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^2.11.2",
     "react-csv": "^2.2.2"
   }
 }
